syntax = "proto3";
package broker.auth.v1;
option go_package = "github.com/textileio/broker-core/gen/broker/auth/v1;auth";

message AuthRequest {
    // JWT token
    string jwtBase64URL = 1;
}

message AuthResponse {
    string jwk = 1;
}

service APIService {
    rpc Auth(AuthRequest) returns (AuthResponse) {}
}
